# ai_docker

./: README.md  docker-compose.yml
jupyter/: Dockerfile  pyproject.toml  requirements.txt
model_server/: Dockerfile  app.py  pyproject.toml  requirements.txt
notebooks/: test_model.ipynb
notebooks/.ipynb_checkpoints/: test_model-checkpoint.ipynb
