[tool.poetry]
name = "llama3-notebook"
version = "0.1.0"
description = "Notebook client for LLaMA 3 inference"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "*"
notebook = "*"
requests = "*"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.3.0%2Bcu121-cp310-cp310-linux_x86_64.whl" }
torchvision = "*"
torchaudio = "*"
transformers = "*"
accelerate = "*"
bitsandbytes = "*"
numpy = "*"
pandas = "*"
scikit-learn = "*"
seaborn = "*"
ipywidgets = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"