[tool.poetry]
name = "llama3-notebook"
version = "0.1.0"
description = "Jupyter client for LLaMA 3 inference API"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "*"
notebook = "*"
requests = "*"
numpy = "*"
pandas = "*"
scikit-learn = "*"
seaborn = "*"
ipywidgets = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"